Added per-charm grant_on_advancemnet toggles. Restructured config file to be more readable.